--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 mnemonic = 'ski few letter love movie aerobic keen rule over popular umbrella mountain'
+PRIVATE_KEY = '0x5F6d6b4890bA78d2b85f258826B979E816729c34'
